--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ section {
   background-image: url('../images/dust_scratches.png');
   clear: both;
   width: 360px;
-  margin: 2rem auto;
+  margin: 1.3rem auto;
 }
 
 h1 {
@@ -100,7 +100,6 @@ img.profile {
 
 div.wrapper {
   flex: 1 0 auto;
-  padding: 1rem 0;
   /* background-color: #ededed; */
   background-image: url('../images/pattern.jpg');
   border-top: 2px solid #ccc;
@@ -176,6 +175,10 @@ h3.image-text {
   section {
     width: 480px;
   }
+
+  section {
+    margin: 2rem auto;
+  }
   nav {
     width: 92%;
   }
@@ -183,6 +186,11 @@ h3.image-text {
   a.portfolio {
     margin: 0 4rem;
     padding: 0 4rem;
+  }
+
+  div.wrapper {
+    padding: 1rem 0;
+    margin: 0;
   }
 
   img.profile {
@@ -217,10 +225,13 @@ h3.image-text {
     padding: 0 1rem;
   }
   img.game {
-    width: 300px;
+    width: 294px;
   }
   h3.image-text {
-    width: 290px;
+    width: 284px;
+  }
+  div.portfolio {
+    left: 19px;
   }
 }
 
@@ -229,5 +240,8 @@ h3.image-text {
   header,
   section {
     width: 960px;
+  }
+  div.portfolio {
+    left: 0;
   }
 }
