css profile image bottom margin for large screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,6 +241,11 @@ h3.image-text {
   section {
     width: 960px;
   }
+
+  img.profile {
+    margin-bottom: 1rem;
+  }
+
   div.portfolio {
     left: 0;
   }
