--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,7 @@ nav a {
   color: #777;
   cursor: pointer;
   font-size: 1.1rem;
+  transition: 0.2s;
 }
 
 nav a:hover {
@@ -139,6 +140,7 @@ button {
   background-color: #4aaaa5;
   outline: 0;
   cursor: pointer;
+  transition: 0.2s;
 }
 
 button:hover {
