added transition to hover effects

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,7 @@ div.portfolio {
   position: relative;
   margin-right: 2rem;
   margin-bottom: 3rem;
+  transition: all 0.4s;
 }
 
 div.portfolio:hover {
